--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,119 @@
 /**index.wxss**/
-.userinfo {
+
+.notice-box {
+  width: 100%;
+  height: 60rpx;
+  line-height: 60rpx;
+  background-color: #09bb07;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.notice-box text {
+  color: white;
+}
+
+.top {
+  height: 60rpx;
+  background-color: #f5f5f5;
+}
+
+swiper {
+  width: 100%;
+  height: 420rpx;
+}
+
+swiper-item image {
+  width: 100%;
+  height: 100%;
+}
+
+.image-box {
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-box image {
+  width: 128px;
+  height: 42px;
+}
+
+/*goods-list*/
+
+.goods-box {
+  display: flex;
+  align-items: center;
+  padding: 10rpx;
+  border-bottom: 1px solid #ededed;
+  background: white;
+}
+
+.goods-image {
+  width: 200rpx;
+  height: 200rpx;
+}
+
+.goods-info {
+  flex: 1;
+  margin-left: 20rpx;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.goods-name text {
+  font-size: 32rpx;
+}
+
+.goods-desc text {
+  font-size: 24rpx;
+  color: #a3a3a3;
+}
+
+.goods-price {
+  display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+.goods-price .price-unit {
+  color: #ff6200;
+  font-size: 26rpx;
+}
+
+.goods-price .price-text {
+  color: #ff6200;
+  font-size: 32rpx;
+}
+
+.footer {
+  padding: 8px 0;
+  text-align: center;
+}
+
+.footer text {
+  font-size: 24rpx;
+  color: #a3a3a3;
+}
+
+/*float-cart-box  */
+
+.float-cart-box {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+
+.float-cart-box .cart-icon {
+  font-size: 46px;
+  background-color: white;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+  border: 2px solid #fff;
+  box-shadow: 0 0 5px gray;
 }
