--- a/app.wxss
+++ b/app.wxss
@@ -48,9 +48,7 @@ icon.small { line-height: 20px; font-size: 20px; }
 
 icon.xsmall { line-height: 15px; font-size: 15px; }
 
-icon[color="primary"] { color: #F3514F; }
-
-icon[color="major"] { color: #FF6200; }
+icon[color="primary"] { color: #09bb07; }
 
 icon[color="white"] { color: white; }
 
