--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,12 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="notice-box">
-    <icon class="notice xsmall" color="white"></icon>
+  <view class="notice-box row">
+    <icon class="icon-notification" color="white"></icon>
     <text>公告： 五一大酬宾！！买了就是盆友!!! </text>
   </view>
   <view class="top"></view>
   <swiper indicator-dots="true" indicator-active-color="#eee" autoplay="true" interval="3000" duration="800">
-    <block wx:for="{{imgUrls}}" wx:key="{{index}}">
+    <block wx:for="{{banners}}" wx:key="{{index}}">
         <swiper-item>
           <image src="{{item}}" class="slide-image" width="355" height="150"/>
         </swiper-item>
@@ -19,25 +19,25 @@
   </view>
   <view class="h-gap"></view>
   <view class="goods-list" >
-    <view class="goods-box" wx:for="{{goodsList}}" wx:for-item="goods" wx:key="index">
-      <image class="goods-image" src="{{goods.pic}}" />
+    <view class="goods-item" wx:for="{{goodsList}}" wx:key="index">
+      <image class="goods-image" src="{{item.pic}}" />
       <view class="goods-info">
-          <view class="goods-name"><text>{{goods.name}}</text></view>
-          <view class="goods-desc"><text>{{goods.desc}}</text></view>
-          <view class="goods-price">
-            <view class="price-box">
-              <text class="price-unit">￥</text>
-              <text class="price-text">{{goods.price}}</text>
+          <view class="goods-name"><text>{{item.name}}</text></view>
+          <view class="goods-desc"><text>{{item.desc}}</text></view>
+          <view class="goods-price-num">
+            <view class="goods-price">
+              <text class="goods-price-unit">￥</text>
+              <text class="goods-price-text">{{item.price}}</text>
             </view>
             <view>
-              <icon class="plus normal" data-index="{{index}}" bindtap="showPanel"></icon>
+              <icon class="icon-add normal" data-index="{{index}}" bindtap="showPanel"></icon>
             </view>
           </view>
       </view>
     </view>
   </view>
   <view class="footer">
-    <text>—— 少盐洋芋bar 为您服务！ ——</text>
+    <text>—— 我是有底线的 ——</text>
   </view>
   <view class="goods-buy-panel-cover" wx:if="{{panel.show}}"></view>
   <view class="goods-buy-panel-container {{panel.show ? 'goods-buy-panel-show' : ''}}">
@@ -50,17 +50,17 @@
         </view>
       </view>
       <view class="buy-panel-close" bindtap="closePanel">
-        <icon class="close" color="gray"></icon>
+        <icon class="icon-close" color="gray"></icon>
       </view>
     </view>
     <view class="buy-panel-num-container">
       <view class="buy-panel-num-text">
-        <text>购买数量：</text>
+        <text class="xl">购买数量：</text>
       </view>
       <view class="goods-num-selector">
-        <view class="quantity-minus {{panel.goodsNum==1? 'quantity-disabled' : ''}}" bindtap="reduceNum" >-</view>
-        <input class="quantity-text" type="number" value="{{panel.goodsNum}}" bindinput="changeNumInput" ></input>
-        <view class="quantity-plus {{panel.goodsNum==99? 'quantity-disabled' : ''}}" bindtap="increaseNum">+</view>
+        <view class="num-minus {{panel.goodsNum==1? 'num-disabled' : ''}}" bindtap="reduceNum" >-</view>
+        <input class="num-text" type="number" value="{{panel.goodsNum}}" bindinput="changeNumInput" ></input>
+        <view class="num-plus {{panel.goodsNum==99? 'num-disabled' : ''}}" bindtap="increaseNum">+</view>
       </view>
     </view>
     <view class="buy-panel-next" bindtap="addToCart">
@@ -69,6 +69,6 @@
   </view>
   <view class="float-cart-box" bindtap="navigateToCart">
     <view class="badge" style="position:absolute;top:0;right:0;">{{cartCount}}</view>
-    <icon class="cart-round cart-icon"></icon>
+    <view class="row cart-icon"><icon class="icon-cart1 normal" color="white"></icon></view>
   </view>
 </view>
