--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 30rpx 0;
 }
 
 .userinfo-avatar {
@@ -15,13 +16,10 @@
 
 .userinfo-nickname {
   color: #aaa;
+  font-size: 32rpx;
 }
 
-.nav-list {
-  margin: 30rpx 0;
-}
-
-.nav-item {
+.nav-list .nav-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -44,11 +42,10 @@
   margin-left: 32rpx;
 }
 
-.footer {
-  height: 100%;
+.logout {
+  margin-top: 50rpx;
 }
 
-button {
+.logout button {
   width: 600rpx;
-  margin: 0 auto;
 }
